prepare for video rooms 7
